--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,9 @@
   background-color: white;
   color: none;
 }
+.bg-Todo {
+  background-image: url("./Images/Login_Signup.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
