--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,9 @@
   background-color: white;
   color: none;
 }
+z-index-last {
+  z-index: 2000;
+}
 .bg-Todo {
   background-image: url("./Images/Login_Signup.jpg");
   background-size: cover;
