Improve security and add new features

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@
 }
 .dark .bg-light {
   border: 1px solid darkslategray !important;
-  background-color:  #414040!important;
+  background-color:  #383636!important;
 }
 .dark .nav-link{
   border: none !important;
@@ -24,7 +24,7 @@
   color: white !important;
 } 
 .dark .jumbotron {
-  background-color: #414040;
+  background-color: #1b1b1b;
 }
 .dark .nav-tabs{
   border: none !important ;
